--- a/HyperSolver/parameters.conf
+++ b/HyperSolver/parameters.conf
@@ -3,7 +3,7 @@ number_of_parents_to_select = 2
 individuals_to_exchange = 2
 number_of_islands = 4
 run_times = 1
-population_size = 10
+population_size = 20
 generations = 1000
 crossover_probability_per_island = 0.9 0.9 0.9 0.9
 mutation_probability_per_island = 0.01 0.05 0.07 0.08
@@ -12,3 +12,8 @@ features = WEIGHT ITEMS_IN_KNAPSACK ITEMS_OUT_KNAPSACK TOTAL_WEIGHT_LEFT TOTAL_V
 heuristics = DEF MAXP MAXPW MINW MARK
 number_rules = 30
 training_split = 10-90
+lower_bound = -5
+upper_bound = 5
+nm = 150
+pc = 1
+nc = 30
